[gd_scene load_steps=6 format=3 uid="uid://cyhndmkdj6pe5"]

[ext_resource type="Script" path="res://Scripts/rock_mine.gd" id="1_op32x"]
[ext_resource type="Texture2D" uid="uid://cealpksojhry6" path="res://Assets/stone.png" id="2_3pnoe"]
[ext_resource type="Resource" uid="uid://cwo5h7x27pca3" path="res://inventory/items/rock.tres" id="2_lxmda"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vrmw0"]
radius = 15.8902

[sub_resource type="CircleShape2D" id="CircleShape2D_wsdcd"]
radius = 8.0

[node name="RockMine" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_op32x")
item = ExtResource("2_lxmda")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7.97784, 7.96813)
scale = Vector2(0.0443213, 0.063745)
texture = ExtResource("2_3pnoe")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_vrmw0")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("CircleShape2D_wsdcd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
